--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9),
  libcap-dev,
  libgdbm-dev,
  libiodbc2-dev,
- libjson0 | libjson-c2,
+ libjson0 | libjson-c2 | libjson-c3,
  libjson0-dev | libjson-c-dev,
  libldap2-dev,
  libpam0g-dev,
